--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -21,8 +21,9 @@
 					</div>
 				</div>
 			</md-tab>
-			<md-tab label="Graph option three">
-				<p>Histo</p>
+			<md-tab label="Tree Plot">
+				<div tree-plot>
+				</div>
 			</md-tab>
 			<md-tab label="You get the idea">
 				<p>yea</p>
