Added Min-Max estimation range validation, does not include automatic resetting

--- a/public/modules/projects/css/projects.css
+++ b/public/modules/projects/css/projects.css
@@ -111,3 +111,10 @@ md-fab-toolbar .md-fab-toolbar-wrapper {
 .searchBar {
   margin: 10px;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	display: none; <- Crashes Chrome on hover 
+	-webkit-appearance: none;
+	margin: 0; /* <-- Apparently some margin are still there even though it's hidden 
+}
