Gave the middle estimation a maximum value restriction;

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -37,7 +37,7 @@
 					</md-input-container>
 					<md-input-container class = "treeInput" flex ="10" ng-show = "estimator() && isOpenForEstimation()">
 						<label>Qty</label>
-						<input type="number" ng-model="node.estimations[userIndex]" ng-change="updateLocalTree(this, node)" ng-readonly = "estimated" ng-disabled="node.nodes.length > 0" min="{{ (node.minestimations[userIndex] === null) ? 0 : node.minestimations[userIndex] }}" required>
+						<input type="number" ng-model="node.estimations[userIndex]" ng-change="updateLocalTree(this, node)" ng-readonly = "estimated" ng-disabled="node.nodes.length > 0" min="{{ (node.minestimations[userIndex] === null) ? 0 : node.minestimations[userIndex] }}" max="{{ (node.maxestimations[userIndex] === null) ? 1000 : node.maxestimations[userIndex] }}" required>
 					</md-input-container>
 					<md-input-container class = "treeInput" flex ="10" ng-show = "estimator() && isOpenForEstimation()">
 						<label>Max</label>
