--- a/public/modules/projects/css/projects.css
+++ b/public/modules/projects/css/projects.css
@@ -115,6 +115,7 @@ md-fab-toolbar .md-fab-toolbar-wrapper {
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
 	display: none;
+	-moz-appearance: none;
 	-webkit-appearance: none;
 	margin: 0;
 }
