--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -7,16 +7,33 @@
 			</md-input-container>
 
 			<md-list>
-				<md-list-item ng-click="showAddEstimatorDialogBox()">
-					<p>Estimators</p>
+				<md-list-item>
+					<md-button class="md-icon-button" aria-label="Use Android">
+						<md-icon md-svg-src="modules/projects/img/icons/right_arrow.svg" ng-show="!showEstimators" ng-click="toggleEstimatorsMenu()"> </md-icon>
+						<md-icon md-svg-src="modules/projects/img/icons/down_arrow.svg" ng-show="showEstimators" ng-click="toggleEstimatorsMenu()"> </md-icon>
+						<md-tooltip>Show/Hide Estimators</md-tooltip>
+					</md-button>
+					<h3>Estimators</h3>
+					<!-- <md-button class="md-icon-button" aria-label="Use Android">
+						<md-icon md-svg-src="modules/projects/img/icons/edit.svg" ng-click="showAddEstimatorDialogBox()"> </md-icon>
+						<md-tooltip>Add/Remove Estimators</md-tooltip>
+					</md-button> -->
 				</md-list-item>
-				<md-list-item class="md-2-line" ng-repeat="person in people">
+				<md-list-item class="md-2-line" ng-repeat="person in people" ng-show="showEstimators == true && person.isEstimator == true">
+					<md-icon class="md-avatar" md-svg-src="modules/projects/img/icons/person.svg" ng-show="showEstimators" data-nodrag></md-icon>
 					<div class="md-list-item-text">
 						<h3> {{person.firstName}} {{person.lastName}} </h3>
 						<p> {{person.username}} </p>
 					</div>
 				</md-list-item>
 			</md-list>
+
+			<md-button class="md-primary" ng-click="showAddEstimatorDialogBox()" ng-show="owner() && !isOpenForEstimation()" ng-disabled = "estimationForm.$invalid">
+				Edit Estimators
+			</md-button>			
+			<md-button class="md-primary" ng-click="initUsers(this)" ng-show="owner() && !isOpenForEstimation()" ng-disabled = "estimationForm.$invalid">
+				Refresh Estimators
+			</md-button>
 
 			<md-divider></md-divider>
 
