--- a/public/modules/projects/views/add-estimator.client.view.html
+++ b/public/modules/projects/views/add-estimator.client.view.html
@@ -13,8 +13,8 @@
 			<p>
 				{{person.username}}
 			</p>
-			<md-checkbox class="md-secondary" ng-model="person.isEstimator"></md-checkbox> 
+			<md-checkbox class="md-secondary" ng-model="person.isEstimator" ng-disabled="!owner()"></md-checkbox> 
 		</md-list-item>
-		<md-button class="md-primary md-raised" ng-click="updateEstimators();cancel()" ng-disabled="!owner()"> Save </md-button>
+		<md-button class="md-primary md-raised" ng-click="updateEstimators();cancel()" ng-show="owner()"> Save </md-button>
 	</md-content>
 </md-dialog>
