--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -3,7 +3,7 @@
 		<md-card-content>
 			<md-input-container flex>
 				<label>Project Description</label>
-				<textarea ng-model="project.description"></textarea>
+				<textarea ng-model="project.description" ng-readonly = "isOpenForEstimation()"></textarea>
 			</md-input-container>
 
 			<md-list>
@@ -29,7 +29,7 @@
 					</md-button>
 					<md-input-container class = "treeInput" flex>
 						<label>Title</label>
-						<input ng-model="node.title">
+						<input ng-model="node.title" ng-readonly = "isOpenForEstimation()">
 					</md-input-container>
 
 					<md-input-container class = "treeInput" flex ="10" ng-show = "estimator() && isOpenForEstimation()">
