--- a/public/modules/projects/views/add-estimator.client.view.html
+++ b/public/modules/projects/views/add-estimator.client.view.html
@@ -1,7 +1,8 @@
 <md-dialog data-ng-controller="ProjectEditController" data-ng-init="initUsers(this)">
 	<md-toolbar>
 		<div class="md-toolbar-tools">
-			<h2 >Add Estimators</h2>
+			<h2 ng-if="owner()">Add Estimators</h2>
+			<h2 ng-if="!owner()">Estimators</h2>
 			<span flex></span>
 			<md-button class="md-icon-button" ng-click="cancel()">
 				<md-icon md-svg-src="modules/projects/img/icons/close.svg" aria-label="Close dialog"></md-icon>
@@ -9,12 +10,17 @@
 		</div>
 	</md-toolbar>
 	<md-content>
-		<md-list-item ng-repeat="person in people">
-			<p>
+		<md-list-item ng-repeat="person in people" ng-if="owner()">
+			<p ng-if="owner()">
 				{{person.username}}
 			</p>
-			<md-checkbox class="md-secondary" ng-model="person.isEstimator" ng-disabled="!owner()"></md-checkbox> 
+			<md-checkbox class="md-secondary" ng-model="person.isEstimator" ng-show="owner()"></md-checkbox> 
 		</md-list-item>
 		<md-button class="md-primary md-raised" ng-click="updateEstimators();cancel()" ng-show="owner()"> Save </md-button>
+		<div class="md-list-item-text" ng-repeat="person in people" ng-if="!owner()" style="padding-left: 2%;">
+			<p ng-if="person.isEstimator">
+				{{ person.username }}
+			</p>
+		</div>
 	</md-content>
 </md-dialog>
