added a noram distubution graph

--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -26,3 +26,18 @@
   stroke: #ccc;
   stroke-width: 1.5px;
 }
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+/*.x.axis path {
+    display: none;
+}*/
+.line {
+    fill: none;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+}
