--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -25,8 +25,9 @@
 				<div tree-plot>
 				</div>
 			</md-tab>
-			<md-tab label="You get the idea">
-				<p>yea</p>
+			<md-tab label="Normal Distubution">
+				<div normal-plot>
+				</div>
 			</md-tab>
 		</md-tabs>
 	</md-card>
