--- a/public/modules/projects/views/chat.dialog.client.view.html
+++ b/public/modules/projects/views/chat.dialog.client.view.html
@@ -3,7 +3,7 @@
 		<div class="md-toolbar-tools">
 			<h2>Discussion</h2>
 			<span flex></span>
-			<md-button class="md-icon-button" ng-click="cancel();">
+			<md-button class="md-icon-button" ng-click="cancel()">
 				<md-icon md-svg-src="modules/projects/img/icons/close.svg" aria-label="Close dialog"></md-icon>
 			</md-button>
 		</div>
@@ -18,6 +18,7 @@
 			  <p>{{ c.msg }}</p>
 			</div>
 		</md-list-item>
+	<md-dialog-content>
 
 		<md-list-item>
 			<md-input-container flex>
