--- a/public/modules/projects/views/chat.dialog.client.view.html
+++ b/public/modules/projects/views/chat.dialog.client.view.html
@@ -3,7 +3,7 @@
 		<div class="md-toolbar-tools">
 			<h2>Discussion</h2>
 			<span flex></span>
-			<md-button class="md-icon-button" ng-click="cancel()">
+			<md-button class="md-icon-button" ng-click="cancel();">
 				<md-icon md-svg-src="modules/projects/img/icons/close.svg" aria-label="Close dialog"></md-icon>
 			</md-button>
 		</div>
@@ -24,7 +24,7 @@
 				<label> Add to discussion </label>
 				<textarea ng-model="chat" columns="1" autofocus></textarea> 
 			</md-input-container>
-			<md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="submitChat(currentNode, chat); showChatDialog($event,currentNode);" ng-disabled="chat === '' ">
+			<md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="submitChat(currentNode, chat); showChatDialog($event, currentNode);" ng-disabled="chat === '' ">
 				<md-tooltip>
 					Send
 				</md-tooltip>
