--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -19,7 +19,7 @@
 						<md-tooltip>Add/Remove Estimators</md-tooltip>
 					</md-button> -->
 				</md-list-item>
-				<md-list-item class="md-2-line" ng-repeat="person in people" ng-show="showEstimators == true && person.isEstimator == true">
+				<md-list-item class="md-2-line" ng-repeat="person in project.users" ng-show="showEstimators == true">
 					<md-icon class="md-avatar" md-svg-src="modules/projects/img/icons/person.svg" ng-show="showEstimators" data-nodrag></md-icon>
 					<div class="md-list-item-text">
 						<h3> {{person.firstName}} {{person.lastName}} </h3>
@@ -27,6 +27,7 @@
 					</div>
 				</md-list-item>
 			</md-list>
+
 
 			<md-button class="md-primary" ng-click="showAddEstimatorDialogBox()" ng-show="owner() && !isOpenForEstimation()" ng-disabled = "estimationForm.$invalid">
 				Edit Estimators
