Fixed merge conflict

--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -26,6 +26,12 @@
 						<p> {{person.username}} </p>
 					</div>
 				</md-list-item>
+				<md-list-item class="md-2-line" ng-repeat="person in people">
+					<div class="md-list-item-text">
+						<h3> {{person.firstName}} {{person.lastName}} </h3>
+						<p> {{person.username}} </p>
+					</div>
+				</md-list-item>
 			</md-list>
 
 
