--- a/public/modules/projects/views/add-estimator.client.view.html
+++ b/public/modules/projects/views/add-estimator.client.view.html
@@ -9,13 +9,13 @@
 			</md-button>
 		</div>
 	</md-toolbar>
-	<md-content>
-		<md-list-item class="md-2-line" ng-repeat="person in people" > <!-- ng-show="person.isEstimator" -->
+	<md-dialog-content>
+		<md-list-item class="md-2-line" ng-repeat="person in people">
 			<div class="md-list-item-text">
 				<h3> {{person.firstName}} {{person.lastName}} </h3>
 				<p> {{person.username}} </p>
 			</div>
-			<md-checkbox class="md-secondary" ng-model="person.isEstimator"></md-checkbox>
+			<md-checkbox class="md-secondary" ng-model="person.isEstimator"></md-checkbox> 
 		</md-list-item>
 <!-- 		<md-list-item class="md-2-line" ng-repeat="person in people" ng-show="!person.isEstimator">
 			<div class="md-list-item-text">
