--- a/public/modules/projects/views/add-estimator.client.view.html
+++ b/public/modules/projects/views/add-estimator.client.view.html
@@ -10,11 +10,12 @@
 		</div>
 	</md-toolbar>
 	<md-dialog-content>
-		<md-list-item ng-repeat="person in people" ng-if="owner()">
-			<p>
-				{{ person.username }}
-			</p>
-			<md-checkbox class="md-secondary" ng-model="person.isEstimator" ng-show="owner()"></md-checkbox> 
+		<md-list-item class="md-2-line" ng-repeat="person in people">
+			<div class="md-list-item-text">
+				<h3> {{person.firstName}} {{person.lastName}} </h3>
+				<p> {{person.username}} </p>
+			</div>
+			<md-checkbox class="md-secondary" ng-model="person.isEstimator"></md-checkbox> 
 		</md-list-item>
 		<md-button class="md-primary md-raised" ng-click="updateEstimators();cancel()" ng-show="owner()"> Save </md-button>
 		<md-list-item ng-repeat="person in people" ng-if="person.isEstimator && !owner()">
