--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -68,6 +68,8 @@
 	<!--Livereload script rendered -->
 	<script type="text/javascript" src="http://{{request.hostname}}:35729/livereload.js"></script>
 	{% endif %}
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>
+	<script type="text/javascript" src="/lib/angular-socket-io/socket.min.js"></script>
 </body>
 
 </html>
