--- a/public/modules/projects/views/edit-project.client.view.html
+++ b/public/modules/projects/views/edit-project.client.view.html
@@ -6,11 +6,11 @@
 				<textarea ng-model="project.description" ng-readonly = "isOpenForEstimation()"></textarea>
 			</md-input-container>
 
-			<md-list data-ng-init="initUsers()">
+			<md-list>
 				<md-list-item>
 					<md-button class="md-icon-button" aria-label="Use Android">
-						<md-icon md-svg-src="modules/projects/img/icons/right_arrow.svg" ng-show="!showEstimators" ng-click="toggleEstimatorsMenu()"> </md-icon>
-						<md-icon md-svg-src="modules/projects/img/icons/down_arrow.svg" ng-show="showEstimators" ng-click="toggleEstimatorsMenu()"> </md-icon>
+						<md-icon md-svg-src="modules/projects/img/icons/right_arrow.svg" ng-show="!showEstimators" ng-click="toggleEstimatorsList()"> </md-icon>
+						<md-icon md-svg-src="modules/projects/img/icons/down_arrow.svg" ng-show="showEstimators" ng-click="toggleEstimatorsList()"> </md-icon>
 						<md-tooltip>Show/Hide Estimators</md-tooltip>
 					</md-button>
 					<h3>Estimators</h3>
