Fix toolbar going over fab

--- a/public/modules/projects/css/projects.css
+++ b/public/modules/projects/css/projects.css
@@ -42,6 +42,7 @@ md-fab-toolbar .md-fab-toolbar-wrapper {
 
 .cardHeader {
 	border-radius: 2px 2px 0 0 !important;
+	z-index: 1 !important;
 }
 
 .searchBar {
