--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -71,8 +71,8 @@
 					<p ng-hide="getEstimationProgress(project)"></p>
 					<p ng-show="{{project.openForEstimation}}">Estimation progress:  
 					<md-progress-linear md-mode="determinate" value="{{perc}}"></md-progress-linear>
-					<p><md-button aria-label="View" class="md-button" ng-click="showAlert($event, '{{project.users}}', 'Estimators')" flex>
-						Estimators
+					<p><md-button aria-label="View" class="md-button" ng-click="showEstimatorDialogBox($event, project)" flex>
+						Estimators 
 					</md-button></p>
 					<p><md-button aria-label="View" class="md-button" ng-click="showAlert($event, '{{project.description}}', 'Description')" flex>
 						View Description
