added the info buttons

--- a/public/modules/reports/views/view-report.client.view.html
+++ b/public/modules/reports/views/view-report.client.view.html
@@ -10,22 +10,34 @@
 						<i class="glyphicon glyphicon-trash"></i>
 					</a>
 				</div>
+				<md-button>
+					Info
+				</md-button>
 				<div flex id="chart">
 				<div d3-bars bar-height='25' bar-padding='0' id='barchart'></div>
 				</div>
 			</md-tab>
 			<md-tab label="Box Plot">
 			<div flex id="chart">
+				<md-button>
+					Info
+				</md-button>
 				<div class ="chartBorder">
 					<div box-plot id='boxPlot'></div>
 					</div>
 				</div>
 			</md-tab>
 			<md-tab label="Tree Plot">
+				<md-button>
+					Info
+				</md-button>
 				<div tree-plot>
 				</div>
 			</md-tab>
 			<md-tab label="Normal Distubution">
+				<md-button>
+					Info
+				</md-button>
 				<div normal-plot>
 				</div>
 			</md-tab>
