Small update to add more consistency to the dialogs

--- a/public/modules/projects/views/list-projects.client.view.html
+++ b/public/modules/projects/views/list-projects.client.view.html
@@ -74,7 +74,7 @@
 					<p><md-button aria-label="View" class="md-button" ng-click="showEstimatorDialogBox($event, project)" flex>
 						Estimators 
 					</md-button></p>
-					<p><md-button aria-label="View" class="md-button" ng-click="showAlert($event, '{{project.description}}', 'Description')" flex>
+					<p><md-button aria-label="View" class="md-button" ng-click="showDescriptionDialog($event, project)" flex>
 						View Description
 					</md-button></p>
 					<!--<p>{{project.description}}</p>-->
